--- a/getting_started.Rmd
+++ b/getting_started.Rmd
@@ -3,6 +3,7 @@ title: "Getting started with EMIT imaging spectroscopy data"
 author: "Anna Schweiger"
 output:
   html_document: default
+  # pdf_document: default
 ---
 
 ### Load packages
@@ -19,7 +20,7 @@ Great tutorials for downloading **EMIT** data can be found on NASA's EMIT-Data-R
 
 For **bulk download** see the [NASA Earthdata Wiki] (https://wiki.earthdata.nasa.gov/display/EDSC/How+To%3A+Use+the+Download+Access+Script.) 
 
-The one tile we will use in this tutorial can accessed here, or in the **test_data**:  
+The one tile we will use in this tutorial can accessed here, or follow the link in the **test_data**:  
 [**L2A reflectance**](https://data.lpdaac.earthdatacloud.nasa.gov/lp-prod-protected/EMITL2ARFL.001/EMIT_L2A_RFL_001_20230812T223333_2322415_006/EMIT_L2A_RFL_001_20230812T223333_2322415_006.nc)  
 [**Uncertainty**](https://data.lpdaac.earthdatacloud.nasa.gov/lp-prod-protected/EMITL2ARFL.001/EMIT_L2A_RFL_001_20230812T223333_2322415_006/EMIT_L2A_RFLUNCERT_001_20230812T223333_2322415_006.nc)  
 [**Μask**](https://data.lpdaac.earthdatacloud.nasa.gov/lp-prod-protected/EMITL2ARFL.001/EMIT_L2A_RFL_001_20230812T223333_2322415_006/EMIT_L2A_MASK_001_20230812T223333_2322415_006.nc)
